test/expected/set_explicit-ecsu.out
set explicit-ecsu
    ^
5: error: set option "explicit-ecsu" requires =<value>
